[package]
name = "find-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
# description.workspace = true
description = "A fast, modern find command replacement written in Rust"

[dependencies]
clap = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = "3.6"